--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </li>
                 <li><a href="javascript:;"><em class="qq"></em>QQ登录</a></li>
                 <li><a href="javascript:;">登录</a></li>
-                <li><a href="javascript:;">注册</a></li>
+                <li><a href="register.html">注册</a></li>
                 <li><a href="javascript:;" target="_blank"><em class="cart"></em>我的购物车 <span
                         class="cart-num">0</span></a></li>
                 <li><a href="javascript:;" target="_blank"><em class="order"></em>我的订单</a>
